feat(docs): add stats documentation
